$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-26 (opened August 31,2009)

	* bioenv: uses standard R function combn() and removes
	ripley.subs() and ripley.subsets() from vegan. The result should
	be unchanged.

Version 1.16-25 (closed August 31, 2009)

	* mantel.correlog: updated to the version 1.4 of Pierre Legendre's
	package. 

	*  RsquareAdj: documented.

	* ordiellipse & ordihull: argument 'draw' got a new alternative
	"none". With this, nothing is drawn but the invisible plotting
	structure is returned. This was added so that it is easier to
	develop permutation tests for hulls and ellipses.

Version 1.16-24 (opened August 17, 2009)

	* ordiellipse & ordihull: gained new argument 'label' to put the
	name of the group in the centre of the ellipse or the hull. The
	functions now return invisibly data on their plots for each
	plotted item: ordiellipse() the covariance matrix (cov.wt()
	result), and ordihull() the coordinates of the hull vertices.
	These inivisible results have a summary() method that displays the
	centres of the hulls or ellipses and their surface areas.

	* ordiellipse: does not depend on the 'ellipse' package, but finds
	the coordinates of ellipse using the equation taken from the 'car'
	package. However, this devel version of 'vegan' still must SUGGEST
	'ellipse', because 'plot.MOStest' requires 'ellipse'. The current
	release version does not include 'plot.MOStest' and could be
	liberated from the 'ellipse' dependence.

	* spantree: first argument 'd' like in hclust()instead of 'dis'.
	Got a 'call' item so that update() works.

	* treedive & treeheight: accept 'spantree' objects. EXPERIMENTAL
	CHANGE THAT MAY BE CANCELLED.

	* treedist: average distance of species trees for two
	sites. Generalization of treedive(): builds a species tree of two
	sites and sees how much of the tree is shared between two sites,
	and how much is unique to the combination. The measure is similar